k8s/redis/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: cineops
spec:
  selector:
    component: redis
  ports:
  - port: 6379
    targetPort: 6379
